<resources>
    <string name="app_name">SmartButler</string>
    <string name="text_setting">设置</string>
    <string name="GUIDE_PAGE">引导页</string>
    <string name="activity_setting">设置</string>
    <string name="guide_pager1">引导页1</string>
    <string name="gudie_pager2">引导页2</string>
    <string name="gudie_pager3">引导页3</string>
    <string name="come_in">进入</string>
    <string name="login_name">登录名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="login_register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="remembered"><b><u>忘记密码?</u></b></string>
    <string name="text_now_login">正在登陆...</string>
    <string name="corporlation">快递公司</string>
    <string name="kd_number">单号</string>
    <string name="bt_kd_sure">确定</string>
    <string name="text_query">查询</string>
    <string name="text_input_phone">手机号码</string>
    <string name="butler_send">发送</string>
    <string name="text_more_length">字数超过30</string>
    <string name="text_tost_empty">输入框不允许为空</string>
    <string name="text_hello_tts">你好，我是小优机器人</string>
    <string name="text_welfare">福利</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_title_2">短信提醒</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">生成二维码</string>
    <string name="text_setting_title_6">百度地图</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_app_name">应用名:</string>
    <string name="text_version">版本号:</string>
    <string name="text_website_address">官网:www.imooc.com</string>
    <string name="text_unknown">未知版本</string>
</resources>
