<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:gravity="center"
android:padding="10dp"
android:layout_width="match_parent"
android:layout_height="match_parent">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_launcher"
    />
<EditText
    android:id="@+id/login_name"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_name"
    />
<EditText
    android:inputType="number"
    android:id="@+id/login_password"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_password"
    />
<CheckBox
    android:id="@+id/login_checkBox"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_gravity="right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/remember_password"
    />
<Button
    android:id="@+id/login_btn"
    android:layout_marginTop="5dp"
    android:background="@drawable/button_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textColor="@android:color/white"
    />
<Button
    android:id="@+id/register"
    android:layout_marginTop="5dp"
    android:background="@drawable/button_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_register"
    android:textColor="@android:color/white"
    />
<TextView
    android:id="@+id/tvRemPassword"
    android:layout_marginTop="5dp"
    android:layout_gravity="right"
    android:layout_marginRight="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/remembered"
    android:textColor="@android:color/black"
    />
<Button
    android:background="@drawable/shape_test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

</LinearLayout>